# salary-predictor-ml

./: .gitattributes  README.md  pyproject.toml  requirements.txt
app/: app.py  explore_page.py  flask_app.py  predict_page.py
app/templates/: analytics.html  index.html  method.html  predictor.html  profile.html  signin.html
data/clean/: cleaned_df_21.csv  cleaned_df_22.csv  cleaned_df_23.csv  cleaned_df_24.csv  final_df_21.csv  final_df_22.csv  final_df_23.csv  final_df_24.csv  final_merged_df_2021_2024.csv
encoders/: encoders.pkl
notebooks/: ml_2021_2024.ipynb  workbook_1.ipynb  workbook_2.ipynb  workbook_3.ipynb  workbook_4.ipynb
